--- a/Tyuiu.KolganenkoRV.Sprint6.Task3.V23/FormMain.resx
+++ b/Tyuiu.KolganenkoRV.Sprint6.Task3.V23/FormMain.resx
@@ -117,10 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
+  <data name="textBoxTask_KRV.Text" xml:space="preserve">
+    <value>Дан массив 5 на 5 элементов.   0 -19  25  34   0                            -19 -16   1  -5  34                             1  13  -5 -17  -5                            3  -9 -15  -1   0                               1  20  15  -5  31</value>
+  </data>
 </root>
